--- a/RunTestsConsoleApp/RunTestsConsoleApp.csproj
+++ b/RunTestsConsoleApp/RunTestsConsoleApp.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\Common\ListsStacksAndQueues.csproj" />
   </ItemGroup>
 
 </Project>
